<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMS Notifications</string>
    <string name="list_notifications_activity_title_new">New notifications</string>
    <string name="list_notifications_activity_title_all">All notifications</string>
    <string name="preferences_activity_title">Preferences</string>
    <string name="administer_spam_senders_activity_title">Add or remove spam senders</string>
    <string name="administer_rules_activity_title">Add, remove or update rules</string>
    <string name="show_spam_message_activity_title">Spam message</string>
    <string name="type_missed_call_ticker_text">Missed call notification</string>
    <string name="type_multiple_missed_call_ticker_text">Multiple missed call notifications</string>
    <string name="type_availability_ticker_text">Availability notification</string>
    <string name="type_multiple_availability_ticker_text">Multiple availability notifications</string>
    <string name="list_notifications_context_menu_item_call">Call</string>
    <string name="list_notifications_context_menu_item_sms">Send SMS</string>
    <string name="list_notifications_context_menu_item_delete_notification">Delete notification</string>
    <string name="list_notifications_context_menu_item_add_to_contacts">Add to contacts</string>
    <string name="list_spam_messages_context_menu_item_delete_spam_message">Delete spam message</string>
    <string name="list_notifications_load_all">Load all notifications</string>
    <string name="list_rule_sets_check_for_updates">Check for updates</string>
    <string name="contact_unknown">Unknown number</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="operators_notifications_preference_category_title">Operator\'s notifications settings</string>
    <string name="operators_notifications_preference_notifications_store_limit_title">Storage limit</string>
    <string name="operators_notifications_preference_notifications_store_limit_summary">Store %1$s notifications.</string>
    <string name="sms_spam_preference_category_title">SMS spam settings</string>
    <string name="sms_spam_preference_item_title">Spam filter</string>
    <string name="sms_spam_preference_item_summary">Add or remove spam senders</string>
    <string name="rules_item_title">Rules</string>
    <string name="rules_item_summary">Add, remove or update rules</string>
    <string name="spam_preference_store_limit_title">Storage limit</string>
    <string name="spam_preference_store_limit_summary">Store %1$s spam messages.</string>
    <string name="no_spam_senders_defined">No spam senders defined</string>
    <string name="there_are_no_notifications">There are no notifications</string>
    <string name="there_are_no_spam_messages">There are no spam messages</string>
    <string name="spam_sender_add_button">Add</string>
    <string name="remove_spam_sender_tip">Tap on item to remove from spam list</string>
    <string name="do_not_store_spam">Do not store spam.</string>
    <string name="tab_title_notifications">Notifications</string>
    <string name="tab_title_spam">Spam</string>
    <string name="tab_title_settings">Settings</string>
    <string name="tab_title_about">About</string>
    <string name="from">From</string>
    <string name="list_rule_sets_item_install">Install</string>
    <string name="list_rule_sets_item_update">Update</string>
    <string name="list_rule_sets_item_remove">Remove</string>
    <string name="version">version: </string>
    <string name="checking_for_updates">Checking for updates...</string>
    <string name="removing_rules">Removing rules...</string>
    <string name="updating_rules">Updating rules...</string>
    <string name="installing_rules">Installing rules...</string>
    <string name="installing_default_rules">Installing rules for country: %1$s</string>
    <string name="fetching_new_notifications">Fetching new notifications...</string>
    <string name="fetching_notifications">Fetching notifications...</string>
    <string name="notification_production_exception">An error occurred while processing a SMS recognized as SMS notification. Possibly a mobile operator changed format of their notifications. Would you like to check on the Internet for updates in format rules?</string>
	<string name="yes">Yes</string>
	<string name="ok">OK</string>
	<string name="no">No</string>
	<string name="report_persisting_issue">Updating the rules didn\'t fix the issue. Would you like to submit an error report? If you do, we will fix the problem and offer rules updates in next couple of days. You will have to manually update them.</string>
	<string name="report_issue">Would you like to submit an error report by e-mail? If you do, we will fix the problem and offer rules updates in next couple of days. You will have to manually update them.</string>
	<string name="no_email_client_installed">There are no email clients installed.</string>
	<string name="attention_requiered">This application requires your attention.</string>
	<string name="send_mail">Send mail...</string>
	<string name="author">Author:</string>
	<string name="nemanja_kovacevic">Nemanja Kovacevic</string>
	<string name="mail_nemanja_kovacevic">nemanja.kovacevic@gmail.com</string>
	<string name="about_missed_call">Missed call from ...</string>
	<string name="about_availability">... is now available again.</string>
	<string name="frequently_asked_questions">Frequently asked questions</string>
	<string name="more_apps_from_this_author">More apps from this author</string>
	<string name="url_faq">http://nemanjakovacevic.net/pages/apps/smsnotifications/faq-en.html</string>

	<string name="check_for_update_internet_connection_problem">There is a problem with the internet connection. Application cannot check for updates at this time.</string>
	<string name="install_rules_internet_connection_problem">There is a problem with the internet connection. Application cannot install rules at this time.</string>
	<string name="updating_rules_internet_connection_problem">There is a problem with the internet connection. Application cannot install rules at this time. Old rules has been removed.</string>
	<string name="default_rules_install_internet_connection_problem">SMS Notifications attempted to install rules for your mobile carrier\'s country. There is a problem with the internet connection and no rules could be installed. You will have to manually install rules from preferences screen in order for application to function properly.</string>
	<string name="country_code_not_supported_problem">SMS Notifications attempted to install rules for your mobile carrier\'s country but country with the ISO code \'%1$s\' is not supported. No rules could be installed. You will have to manually install rules from preferences screen in order for application to function properly.</string>

	<string name="possible_colision_with_sms_app">PLEASE NOTE: This application may not function if you use third party SMS apps like \'GO SMS PRO\' or \'Handcent SMS\'. You should set those apps not to block SMS notifications or to uninstall them and install them AFTER installing \'SMS Notifications\'.</string>

	<string name="rs">Serbia</string>
	<string name="us">Emulator</string>
	
	<string name="unknown">Unknown</string>
	<string name="website_nemanja_kovacevic">http://nemanjakovacevic.net</string>
	<string name="list_operator_notifications_menu_item_delete_all">Delete all notifications</string>

	<string name="if_app_is_not_working">Troubleshooting</string>
	<string name="url_troubleshoot">http://nemanjakovacevic.net/pages/apps/smsnotifications/troubleshoot-en.html</string>
	
	<string name="share">Share via ...</string>
</resources>
