<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:paddingLeft="8dp"
	android:paddingRight="8dp" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingTop="10dip">
		<Button android:id="@+id/spam_sender_add_button" android:text="@string/spam_sender_add_button"
			android:layout_alignParentRight="true" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="10dip"/>
		<EditText android:id="@+id/spam_sender_edit_text"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_toLeftOf="@id/spam_sender_add_button"
			android:inputType="text"
			android:imeOptions="actionDone" />
		<TextView android:id="@+id/remove_spam_sender_tip"
		android:text="@string/remove_spam_sender_tip"
			android:layout_below="@id/spam_sender_edit_text"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:textSize="16sp" 
			android:paddingBottom="10dip"/>
		<View android:layout_width="fill_parent" 
		android:layout_height="1px"
		android:layout_below="@id/remove_spam_sender_tip"
			android:background="#FFFFFFFF"/>
	</RelativeLayout>
	<ListView android:id="@id/android:list" android:layout_weight="1"
		android:drawSelectorOnTop="false" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:paddingTop="10dip" />
	<TextView android:id="@id/android:empty" android:text="@string/no_spam_senders_defined"
		android:layout_width="fill_parent" android:layout_height="wrap_content" android:textSize="16sp"
		android:paddingTop="10dip"/>
</LinearLayout>